# chess_perception

./: CMakeLists.txt  README  chess.cpp  chess.h  knn.cpp  knn.h  knn_types.h  main.cpp
ach/: chessd.cpp  chessd.h  chessdout.cpp  chessdout.h  craftyd.cpp  craftyd.h
gl/: glcamera.cpp  main.h  view.cpp
log/: log.h  logread.cpp  logwrite.cpp
sensors/: mesa.cpp  mesa.h
